# gnostique

./: Cargo.toml  README.md  build.rs  justfile  rustfmt.toml  sqlx-data.json
migrations/: 20230123041532_init.down.sql  20230123041532_init.up.sql  20230124030310_relays.down.sql  20230124030310_relays.up.sql  20230131081945_text_notes.down.sql  20230131081945_text_notes.up.sql  20230819054059_add_preview.down.sql  20230819054059_add_preview.up.sql
resources/: gnostique.gresource.xml  nvktony.json
resources/data/: resources.gresource.xml  style.css
resources/data/icons/: icons.gresource.xml
src/: config.rs  demand.rs  download.rs  follow.rs  gnostique.rs  identity.rs  lane.rs  lib.rs  main.rs  nostr.rs  stream.rs  win.rs
src/app/: action.rs  init.rs  mod.rs  task.rs
src/incoming/: feedback.rs  mod.rs
src/lanes/: mod.rs
src/nostr/: content.rs  gnevent.rs  mod.rs  parse.rs  preview.rs  subscriptions.rs
src/text_note_data/: imp.rs  mod.rs
src/ui/: author.rs  details.rs  lane_header.rs  link.rs  main.rs  mod.rs  note.rs  replies.rs  statusbar.rs  text_note.css  unlock.rs
src/ui/app/: mod.rs  model.rs  msg.rs  view.rs
src/ui/editprofile/: component.rs  mod.rs  model.rs
src/ui/lane/: mod.rs  model.rs  view.rs
src/ui/note/: mod.rs  model.rs  msg.rs  quote.rs  text_note.css  view.rs
src/ui/profilebox/: component.rs  mod.rs  model.rs
src/ui/settings/: mod.rs  model.rs  view.rs
src/ui/settings/identities/: edit.rs  identity.rs  mod.rs  model.rs  view.rs
src/ui/widgets/: author.rs  mod.rs  preview.rs
src/ui/writenote/: component.rs  model.rs
