[package]
name = "gnostique"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/gnostique"
description = "Native desktop Nostr client."
keywords = ["nostr", "client", "GTK", "GUI"]
exclude = ["doc/"]

[dependencies]
age = "0.9.1"
chrono = "0.4.24"
directories = "5.0.0"
futures-util = "0.3.28"
gtk = { package = "gtk4", version = "0.6.6", features = ["v4_8"] }
html-escape = "0.2.13"
linkify = "0.9.0"
nostr-sdk = "0.20.1"
once_cell = "1.17.1"
regex = "1.7.3"
relm4 = "0.6.0-alpha.2"
reqwest = { version = "0.11.16", features = ["stream"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "offline"] }
tokio = { version = "1.27.0" }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
glib-build-tools = "0.17.0"
