[package]
name = "gnostique"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/gnostique"
description = "Native desktop Nostr client."
keywords = ["nostr", "client", "GTK", "GUI"]
exclude = ["doc/"]

[dependencies]
bip39 = "2.0.0"
age = "0.9.2"
chrono = "0.4.26"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
directories = "5.0.1"
futures-util = "0.3.28"
gtk = { package = "gtk4", version = "0.6.6", features = ["v4_8"] }
html-escape = "0.2.13"
linkify = "0.10.0"
nostr-sdk = { git = "https://www.github.com/rust-nostr/nostr" }
once_cell = "1.18.0"
regex = "1.9.3"
relm4 = "0.6.1"
reqwest = { version = "0.11.18", features = ["stream"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.32.0" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
toml = "0.7.6"
lazy_static = "1.4.0"

[build-dependencies]
glib-build-tools = "0.18.0"
