[package]
name = "gnostique"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/gnostique"
description = "Native desktop Nostr client."
keywords = ["nostr", "client", "GTK", "GUI"]
exclude = ["doc/"]

[dependencies]
bip39 = "2.0.0"
age = "0.9.2"
chrono = "0.4.31"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
directories = "5.0.1"
futures-util = "0.3.28"
gtk = { package = "gtk4", version = "0.7.3", features = ["v4_8"] }
html-escape = "0.2.13"
linkify = "0.10.0"
nostr-sdk = "0.24.0"
once_cell = "1.18.0"
regex = "1.10.2"
relm4 = { git = "https://www.github.com/relm4/Relm4", package = "relm4" }
reqwest = { version = "0.11.22", features = ["stream"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.33.0" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
toml = "0.8.2"
lazy_static = "1.4.0"
mediatype = "0.19.15"
webpage = { version = "1.6.0", default-features = false }
fast_image_resize = "2.7.3"
vec1 = "1.10.1"

[build-dependencies]
glib-build-tools = "0.18.0"
